--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "next": "14.2.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.10.2",
+    "world-countries": "^5.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
