--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "14.2.33",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-select": "^5.10.2",
     "world-countries": "^5.1.0",
@@ -19,6 +20,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18.3.0",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
